Добавлена реализация создания Проектов при создании Категории, Тегов при создании Ивента и Метадаты при создании Юзера. Обновлены DTO
- Добавлено поле projects в Category и CategoryCreateDto
- Реализован метод addProject в Category
- Изменён CategoryServiceImpl для обработки проектов при создании категории
- Обновлён EventCreateDto и EventMapper для удаления categoryId и createdBy
- Обновлён openapi.yml для отражения изменений в DTO
