# src/main/java/ru/practicum/eventhub/api/dto/request/CategoryCreateDto.java
@@ -1,7 +1,10 @@
 package ru.practicum.eventhub.api.dto.request;
 
 import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotEmpty;
 import jakarta.validation.constraints.Size;
+
+import java.util.Set;
 
 public record CategoryCreateDto(
 
@@ -10,6 +13,9 @@ public record CategoryCreateDto(
         String name,
 
         @Size(max = 255, message = "Описание должно быть до 255 символов")
-        String description
+        String description,
+
+        @NotEmpty(message = "Список проектов не должен быть пустым")
+        Set<ProjectCreateDto> projects
 ) {
 }
