# src/main/java/ru/practicum/eventhub/api/mapper/CategoryMapper.java
@@ -15,11 +15,13 @@ public interface CategoryMapper {
     @Mapping(target = "id", ignore = true)
     @Mapping(target = "createdAt", ignore = true)
     @Mapping(target = "updatedAt", ignore = true)
+    @Mapping(target = "projects", ignore = true)
     Category fromCreateDto(CategoryCreateDto createDto);
 
     @BeanMapping(nullValuePropertyMappingStrategy = NullValuePropertyMappingStrategy.IGNORE)
     @Mapping(target = "id", ignore = true)
     @Mapping(target = "createdAt", ignore = true)
     @Mapping(target = "updatedAt", ignore = true)
+    @Mapping(target = "projects", ignore = true)
     void updateCategoryFromDto(CategoryUpdateDto updateDto, @MappingTarget Category category);
 }
